# scimeet

./: .env.example  .gitignore  Cargo.toml  README.md
crates/scimeet-cli/: Cargo.toml
crates/scimeet-cli/src/: config.rs  main.rs
crates/scimeet-core/: Cargo.toml
crates/scimeet-core/src/: config.rs  default_params.rs  document.rs  error.rs  http.rs  lib.rs
crates/scimeet-index/: Cargo.toml
crates/scimeet-index/src/: embed.rs  lib.rs  store.rs
crates/scimeet-ingest/: Cargo.toml
crates/scimeet-ingest/src/: chunk.rs  lib.rs
crates/scimeet-rag/: Cargo.toml
crates/scimeet-rag/src/: lib.rs
crates/scimeet-sources/: Cargo.toml
crates/scimeet-sources/src/: arxiv.rs  biorxiv.rs  lib.rs  pubmed.rs
crates/scimeet-translate/: Cargo.toml
crates/scimeet-translate/src/: lib.rs  ollama.rs
