[package]
name = "scimeet-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scimeet-core = { path = "../scimeet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
