[package]
name = "scimeet-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
arrow-array = "57.2"
arrow-schema = "57.2"
futures = "0.3"
lancedb = "0.27"
reqwest = { version = "0.12", features = ["json"] }
scimeet-core = { path = "../scimeet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
