[package]
name = "scimeet-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
scimeet-core = { path = "../scimeet-core" }
scimeet-translate = { path = "../scimeet-translate" }
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", default-features = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
