[package]
name = "scimeet-rag"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
scimeet-core = { path = "../scimeet-core" }
scimeet-index = { path = "../scimeet-index" }
scimeet-translate = { path = "../scimeet-translate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
