[package]
name = "scimeet-sources"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", features = ["json"] }
roxmltree = "0.20"
scimeet-core = { path = "../scimeet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
urlencoding = "2"
