[package]
name = "scimeet-translate"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
scimeet-core = { path = "../scimeet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whatlang = "0.16"
